lwcBundle/main/default/objects/Game__c/fields/Current_Turn__c.field-meta.xml
<CustomField>
    <fullName>Current_Turn__c</fullName>
    <description>X or O</description>
    <label>Current Turn</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>