lwcBundle/main/default/objects/Game__c/fields/Loser__c.field-meta.xml
<CustomField>
    <fullName>Loser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Games_Lost</relationshipName>
    <type>Lookup</type>
</CustomField>