lwcBundle/main/default/objects/Game__c/fields/Player_O__c.field-meta.xml
<CustomField>
    <fullName>Player_O__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player_O</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Games_as_O</relationshipName>
    <type>Lookup</type>
</CustomField>