lwcBundle/main/default/objects/Game__c/fields/Player_X__c.field-meta.xml
<CustomField>
    <fullName>Player_X__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player_X</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Games_as_X</relationshipName>
    <type>Lookup</type>
</CustomField>