lwcBundle/main/default/objects/Game__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Games_Won</relationshipName>
    <type>Lookup</type>
</CustomField>